--- a/paper3_manuscript.tex
+++ b/paper3_manuscript.tex
@@ -31,14 +31,14 @@
 \address{Research Institute of Intelligent Control and Systems, Harbin Institute of Technology, Harbin 150001, China}
 
 \begin{abstract}
-This paper proposes a dual terminal sliding mode control scheme for tracking tasks of rigid robotic manipulators. \textcolor{red}{As a signiﬁcant novelty, the presented design technique integrates the individual sliding mode  surfaces to achieve the finite time convergence of tracking errors utilizing specially designed construct, and accordingly the convergence time is easily obtained due to the integral design. The underactuated issue and input limitation are specially considered in this paper, i.e., the underactuated issue is solved by introducing the hierarchical methodology into the basic dual sliding mode controller. The proposed method can easily combine with the adaptive technique to  eliminate the adverse effect caused by the input limitation in the rigorous stability analysis.} These newly proposed methods also have the characteristics of nonsingularity and chattering suppression, and the effectiveness and high efficiency are verified by stabilizing the motions of the overhead crane and the tracking tasks of the rigid robotic manipulator. Simulation results validate the theoretical analyses about the proposed method.
+This paper proposes a dual terminal sliding mode control scheme for tracking tasks of rigid robotic manipulators. \textcolor{red}{As a signiﬁcant novelty, the presented design technique integrates the individual sliding mode  surfaces to achieve the finite time convergence of tracking errors utilizing specially designed construct, and accordingly the convergence time is easily obtained due to the integral design. The underactuated issue and input limitation are specially considered in this paper, i.e., the underactuated issue is solved by introducing the hierarchical methodology into the basic dual sliding mode controller. The proposed method can easily combine with the adaptive technique to  eliminate the negative effect caused by the input limitation in the rigorous stability analysis.} These newly proposed methods also have the characteristics of nonsingularity and chattering suppression, and the effectiveness and high efficiency are verified by stabilizing the motions of the overhead crane and the tracking tasks of the rigid robotic manipulator. Simulation results validate the theoretical analyses about the proposed method.
 \end{abstract}
 \begin{keyword}
 Finite time control; Robotic manipulator control; Terminal sliding mode control; Input limitation; Stability analysis
 \end{keyword}
 \end{frontmatter}
 \section{Introduction}
-\textcolor{red}{Variable structure systems (VSS) are best known due to their insensitivity to parametric uncertainties~\cite{slotine1991applied}, and have been widely used in engineering applications, such as DC and DC converters~\cite{Tan2008General}, network control schemes~\cite{Hou2016}, aircrafts~\cite{Loza2015Sensor}, tethered satellite systems~\cite{Ma201667}, robotic manipulators~\cite{Beak2016A} and so on. As one important branch of the VSS, the sliding mode control (SMC) has become a popular solution to different kinds of control and signal process issues in recent years~\cite{zhao2015nonlinear,zhang2015attitude}. Meza-S{\'a}nchez et al. applied the second-order SMC scheme to a 3-DOF helicopter prototype based on the experimental test bed~\cite{meza2015output}. Zheng et al. implemented the SMC law to eliminate the bad effect of the input quantization in the coding and decoding process~\cite{zheng2016sliding}. Guzman et al. investigated the SMC application in a power factor rectifier with the constant switching frequency~\cite{guzman2016sliding}. Said et al. designed a robust adaptive sliding mode method to ensure the asymptotically stability of a boost converter~\cite{oucheriah2013pwm}. Roughly speaking, the SMC scheme is competent for normal scientific missions, due to its insensitivity to parametric uncertainties and external disturbances, however, there still exist some obstacles, such as noncontinuous switching inputs in high frequency and low convergence speed of the tracking errors~\cite{boiko2013chattering,lee2009chattering}, preventing it from being utilized in some high-precision engineering applications~\cite{fridman2011sliding}.}
+\textcolor{red}{Variable structure systems (VSS) are best known due to their insensitivity to parametric uncertainties~\cite{slotine1991applied}, and have been widely used in engineering applications, such as DC and DC converters~\cite{Tan2008General}, network control schemes~\cite{Hou2016}, aircrafts~\cite{Loza2015Sensor}, tethered satellite systems~\cite{Ma201667}, robotic manipulators~\cite{Beak2016A} and so on. As one important branch of the VSS, the sliding mode control (SMC) has become a popular solution to different kinds of control and signal process issues in recent years~\cite{zhao2015nonlinear,zhang2015attitude}. Meza-S{\'a}nchez et al. applied the second-order SMC scheme to a 3-DOF helicopter prototype based on the experimental test bed~\cite{meza2015output}. Zheng et al. implemented the SMC law to eliminate the negative effect of the input quantization in the coding and decoding process~\cite{zheng2016sliding}. Guzman et al. investigated the SMC application in a power factor rectifier with the constant switching frequency~\cite{guzman2016sliding}. Said et al. designed a robust adaptive sliding mode method to ensure the asymptotically stability of a boost converter~\cite{oucheriah2013pwm}. Roughly speaking, the SMC scheme is competent for normal scientific missions, due to its insensitivity to parametric uncertainties and external disturbances, however, there still exist some obstacles, such as noncontinuous switching inputs in high frequency and low convergence speed of the tracking errors~\cite{boiko2013chattering,lee2009chattering}, preventing it from being utilized in some high-precision engineering applications~\cite{fridman2011sliding}.}
 
 \textcolor{red}{For alleviating the mentioned bad effects, many scientific researchers have presented remarkable achievements to promote the performance of SMC in last decade~\cite{zong2013quasi,santiesteban2013time,mu2015continuous,evangelista2013lyapunov,gonzalez2014chattering,dadras2012fractional,zhao2013output}. Among these methods, the high-order SMC and super-twisting SMC work well in reducing the chattering to generate continuous inputs~\cite{castillo2015higher,palosz2015laser,edwards2016adaptive,zhao2015finite,liu2015second}. Besides the issue on repressing the chattering, the fast convergence of the SMC scheme becomes a hot subject recently. The normal linear SMC completes the stabilization of the system dynamics in two steps. In the first step, the control inputs drive the system states onto the prescript sliding mode  surfaces, and this stage is also called the reaching phase. Then the sliding mode dynamics function to drive the system states to the origins along the ideal surfaces in the second step, which is usually known as the sliding phase. The reaching phase usually requires the states to reach the ideal sliding mode surfaces in finite time, and suitably selected Lyapunov function and control parameters may accelerate this process; the sliding phase is associated with the designed ideal sliding mode  surfaces closely, and trivial design techniques can guarantee the asymptotically stability of the reduced system~\cite{mu2016switching}. To achieve a fast convergence in the sliding phase, the terminal sliding mode (TSM) control is developed based on the finite time control theory~\cite{haimo1986finite,bhat1997finite}, and compared with the SMC design mentioned above, the most significant contributions of the TSM concept are introducing the finite time convergence to the sliding phase to complete the global finite time convergence~\cite{mu2016switching}. Moreover, the terminal SMC schemes have been utilized to achieve the high precise control, i.e., in~\cite{li2015robust}, an adaptive TSM controller regulated a $2$-link robotic manipulator to track the variable signals. Feng et al. stated a novel Lagrangian dynamic expression for the rigid robot, and applied the global TSM control law to manipulate the robotic dynamics ~\cite{feng2002non}. In~\cite{kamal2016continuous}, Kamal addressed a continuous homogeneous sliding mode algorithm for a perturbed second-order plant, and the algorithm could be regarded as a combination of TSM and super-twisting sliding mode schemes.}
 
@@ -474,9 +474,9 @@ It's obvious that the disturbances in the system~(\ref{eq:simulation second-orde
 \Vert g_2(x,t)\Vert &= \Vert 0.3\sin(3t)+0.5e^{-3t}\Vert\le 0.8,
 \end{align*}
 and hence, based on the analyses in Theorem~\ref{theorem:1}, let $l_1>0.1$ and $l_2>0.8$ guarantee the reaching condition of the desired sliding mode  surface. Also, the inputs $u_1$ and $u_2$ can be viewed as virtual input terms which consist of the linear combination of the crucial inputs in system, i.e., for the system~(\ref{eq:simulation second-order system}), the input terms can be expressed by $\bm u = \Xi\bm\tau$ particularly, where $\bm u\in R^2$ is the virtual input vector; $\bm \tau\in R^2$ stands for the crucial input vector; $\Xi\in R^{2\times 2}$ must have full rank.\par
-The system is supposed to be controlled to the desired condition $\bm x_d=(0,0,0,0)$ from a prescript condition $\bm x_0=(1.2,1.2,1.2,1.2)$. Admittedly, this prescript condition leads to a large initial reaching distance due to the existence of the cubic terms $\gamma x^3$ in the sliding mode  surface, therefore a large reaching speed $k$ is required correspondingly. The control parameters are chosen as: $\alpha = 0.6$, $\lambda = 0.5$, $\gamma = 3$ and $k = 20$. Besides the large reaching speed selected, $\gamma$ accelerates the convergence in the sliding phase indirectly. Therefore the design of the MDTSM controller for the system~(\ref{eq:simulation second-order system}) is finished, and the corresponding simulation results are illustrated from Figure~\ref{Figure:2} to Figure~\ref{Figure:3}.
+The system is supposed to be controlled to the desired condition $\bm x_d=(0,0,0,0)$ from a prescript condition $\bm x_0=(1.2,1.2,1.2,1.2)$. Admittedly, this prescript condition leads to a large initial reaching distance due to the existence of the cubic terms $\gamma x^3$ in the sliding mode  surface, therefore a large reaching speed $k$ is required correspondingly. The control parameters are chosen as: $\alpha = 0.6$, $\lambda = 0.5$, $\gamma = 3$ and $k = 20$. Besides the large reaching speed selected, $\gamma$ accelerates the convergence in the sliding phase indirectly. Therefore the design of the MDTSM controller for the system~(\ref{eq:simulation second-order system}) is finished, and the corresponding simulation results are illustrated from Fig.~\ref{Figure:2} to Fig.~\ref{Figure:3}.
 
-From Figure~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Figure~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Figure~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely associated with $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
+From Fig.~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Fig.~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Fig.~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely associated with $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
 At this point, some effectiveness of the proposed MDTSM control scheme has been verified, and in Section \ref{sec:robotica manipulator}, we will apply it to stabilize the behavior of a $2$-link robotic manipulator directly.
 \begin{figure}[http]
 \centering
@@ -514,14 +514,14 @@ f_2&=-(ML+mL\sin^2q)^{-1}((M+m)g\sin q+mL\dot q^2\sin q\cos q)\\
 b_2&=-(ML+mL\sin^2q)^{-1}\cos q,
 \end{split}
 \end{align}
-where $x$ is defined as the displacement of the horizontal direction, and $q$ stands for the swing angle from the vertical line. $M=1kg$ and $m=0.8kg$ donate the masses of the trolley and the load in Figure~\ref{Figure:8}, respectively, and $g=9.8m/s^2$ refers to as the acceleration of gravity. $L=0.305m$ represents the length of the rope. In this simulation, the disturbances are also introduced:
+where $x$ is defined as the displacement of the horizontal direction, and $q$ stands for the swing angle from the vertical line. $M=1kg$ and $m=0.8kg$ donate the masses of the trolley and the load in Fig.~\ref{Figure:8}, respectively, and $g=9.8m/s^2$ refers to as the acceleration of gravity. $L=0.305m$ represents the length of the rope. In this simulation, the disturbances are also introduced:
 \begin{align}
 g_1(\bm x)&= 0.02\sin t\\
 g_2(\bm x)&=0.07e^{-4t},
 \end{align}
 and those boundaries are easy to obtain. The initial condition of the overhead crane system is $\bm x_0 = (0.1,0,0.1,0)$, while the desired status is $\bm x_d = (2,0,0,0)$. The HDSM controller can be designed with the following set of parameters:
 $c_1=1$, $c_2=4$, $\eta_u = 0.1$, $k_u=1$, $\gamma = 1$, $\lambda = 3$, $\alpha = 0.6$.\par
-Figure~\ref{Figure:9} shows the state response curves of the overhead crane system controlled using the HDSM control scheme, and the results show that the controller stabilize the displacement at $6s$ approximately, though the disturbance exists in the system. One can find that the swing angle is fluctuating in a fairly small range, the boundary of which is no more than $1\times 10^-3rad$, and this phenomena is reasonable and also occurs in the stable hierarchical SMC scheme~\cite{wang2004design}.
+Fig.~\ref{Figure:9} shows the state response curves of the overhead crane system controlled using the HDSM control scheme, and the results show that the controller stabilize the displacement at $6s$ approximately, though the disturbance exists in the system. One can find that the swing angle is fluctuating in a fairly small range, the boundary of which is no more than $1\times 10^-3rad$, and this phenomena is reasonable and also occurs in the stable hierarchical SMC scheme~\cite{wang2004design}.
 \begin{figure}[http]
 \centering
 \includegraphics[width=0.7\textwidth]{paper3_fig9.eps}
@@ -529,7 +529,7 @@ Figure~\ref{Figure:9} shows the state response curves of the overhead crane syst
 \label{Figure:9}
 \end{figure}
 \subsection{Performance of the robotic manipulator}\label{sec:robotica manipulator}
-In order to evaluate the performance of the proposed control scheme, a simulation about the $2$-link robotic manipulator is presented in the following context. Figure~\ref{Figure:1} is the $2$-link manipulator schematic, the dynamics of which can be explained by the dynamic equations in following forms:
+In order to evaluate the performance of the proposed control scheme, a simulation about the $2$-link robotic manipulator is presented in the following context. Fig.~\ref{Figure:1} is the $2$-link manipulator schematic, the dynamics of which can be explained by the dynamic equations in following forms:
 \begin{figure}[http]
 \centering
 \includegraphics[width=0.3\textwidth]{paper3_fig1.eps}
@@ -604,14 +604,14 @@ where the main control parameters of which are selected as $\alpha = 0.6$, $\gam
 \caption{Joint torques}
 \label{Figure:torque}
 \end{figure}
-The performance of the controllers mentioned above is illustrated in Figure~\ref{Figure:4} and Figure~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behavior at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. Through calculation, we can find the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Figure~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system has been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
+The performance of the controllers mentioned above is illustrated in Fig.~\ref{Figure:4} and Fig.~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behavior at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. Through calculation, we can find the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Fig.~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system has been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
 
 \textcolor{red}{At this point, we have verified the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in most engineering applications, manipulators are required to track the variable desired signals, which own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
 \begin{align*}
 &(\bm q_0^T, \dot{\bm q}_0^T)= (1.5,1.5,0,0)\\
 &{\bm q}_d^T=(1.25-(1/5)e^{-t}+(1/20)e^{-4t},1.25+(9/40)e^{-t}-(1/4)e^{-2t})
 \end{align*}\par
- \textcolor{red}{The simulation results are demonstrated in Figure~\ref{Figure:6} and Figure~\ref{Figure:7}, which plot the trajectories of joints of the manipulator~(\ref{eq:manipulator}) regulated by adopting the MDTSM controller. In Figure~\ref{Figure:6}, the tracking error between the variable desired signal and the joint angle $q_1$ keeps decreasing from the initial status, and the two trajectories reach a confluence at about $3s$, which means that $q_1$ has absolutely tracked the variable desired signal. The similar conclusion about $q_2$ can also be obtained from the results in Figure~\ref{Figure:7}. From the enlarged figures, we can detect that the controller perform the high-precision tracking due to the completely coincident curves after $3s$. In addition, the great slopes of the tangent the tracking curves guarantee that the curves can converge to the desired signal curves in short time, and also lead to small overshoot in joint~1 angle regulation, which is reasonable and does not affect the tracking performance in the subsequent time. Taken as a whole, the control system completes the tracking mission at about $3.2s$ from the prescript initial conditions, which performs the smoothly tracking motion subjected to the variable desired signals.}
+ \textcolor{red}{The simulation results are demonstrated in Fig.~\ref{Figure:6} and Fig.~\ref{Figure:7}, which plot the trajectories of joints of the manipulator~(\ref{eq:manipulator}) regulated by adopting the MDTSM controller. In Fig.~\ref{Figure:6}, the tracking error between the variable desired signal and the joint angle $q_1$ keeps decreasing from the initial status, and the two trajectories reach a confluence at about $3s$, which means that $q_1$ has absolutely tracked the variable desired signal. The similar conclusion about $q_2$ can also be obtained from the results in Fig.~\ref{Figure:7}. From the enlarged figures, we can detect that the controller perform the high-precision tracking due to the completely coincident curves after $3s$. In addition, the great slopes of the tangent the tracking curves guarantee that the curves can converge to the desired signal curves in short time, and also lead to small overshoot in joint~1 angle regulation, which is reasonable and does not affect the tracking performance in the subsequent time. Taken as a whole, the control system completes the tracking mission at about $3.2s$ from the prescript initial conditions, which performs the smoothly tracking motion subjected to the variable desired signals.}
 \begin{figure}[http]
 \centering
 \includegraphics[width=0.7\textwidth]{paper3_fig6.eps}
@@ -625,7 +625,7 @@ The performance of the controllers mentioned above is illustrated in Figure~\ref
 \caption{Tracking performance of $q_2$ channel}
 \label{Figure:7}
 \end{figure}
-\textcolor{red}{Another important issue that we always meet in engineering applications, is the actuator constraint due to the physical limitation, which can be regarded as the input limitation problem shown in Eq.~(\ref{eq:second-order system subjected to limitation}). Consider the case that there exists the input limitation in the manipulator model~(\ref{eq:manipulator}), and without loss of generality, the maximum torque of the joint is $50Nm$. Reviewing the torque curve of joint~1  shown in enlarged details of  Figure~\ref{Figure:torque}, we can find that the torque exceeds the reasonable torque upper limit $50Nm$ around $2.3s$. If we still use the MDTSM controller to stabilize the system subjected to input limitation, we can not get the same results as shown in Figure~\ref{Figure:torque}, and this is because that the limitation hamper the rigorous theoretical analyses of Theorem~\ref{theorem:2}. Hence, to overcome this issue, the adaptive MDTSM controller is applied to diminish the effect of the input limitation and to guarantee the rigorous stability analyses.}
+\textcolor{red}{Another important issue that we always meet in engineering applications, is the actuator constraint due to the physical limitation, which can be regarded as the input limitation problem shown in Eq.~(\ref{eq:second-order system subjected to limitation}). Consider the case that there exists the input limitation in the manipulator model~(\ref{eq:manipulator}), and without loss of generality, the maximum torque of the joint is $50Nm$. Reviewing the torque curve of joint~1  shown in enlarged details of  Fig.~\ref{Figure:torque}, we can find that the torque exceeds the reasonable torque upper limit $50Nm$ around $2.3s$. If we still use the MDTSM controller to stabilize the system subjected to input limitation, we can not get the same results as shown in Fig.~\ref{Figure:torque}, and this is because that the limitation hamper the rigorous theoretical analyses of Theorem~\ref{theorem:2}. Hence, to overcome this issue, the adaptive MDTSM controller is applied to diminish the negative effect of the input limitation and to guarantee the rigorous stability analyses.}
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{paper3_fig_limitation_q.eps}
@@ -640,7 +640,7 @@ The performance of the controllers mentioned above is illustrated in Figure~\ref
 \end{figure}
 \textcolor{red}{Here we examine the step response of the adaptive MDTSM control scheme for the robotic manipulator dynamics, since the step response is a severe challenge to the controller. Accordingly, the initial and desired conditions are $(\bm q_0^T, \dot{\bm q}_0^T)= (0.3,0.2,0,0)$ and $({\bm q}_d^T,\dot{\bm q}_d^T)=(1,1,0,0)$, respectively. The design parameters of the adaptive MDTSM controller can be selected as $\varpi_1=50$, $\varpi_2=30$, $\varphi_1=\varphi_2=0.01$, $\nu_1 = 5$, $\nu_2=6$, $\omega_1=\omega_2=1$ to satisfy the parameter conditions in Theorem~\ref{thm:4}. In addition, for better tracking performance, the boundary layer thickness is revised as $\delta=0.1$. }
 
-\textcolor{red}{The results shown in Figure~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Figure~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the large tracking errors lead to the great command inputs. Moveover the boundary layer technique works after $0.4s$ and generates continuous torques in the subsequent time. Compared to the results in Figure~\ref{Figure:torque}, we can find that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Figure~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjected to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
+\textcolor{red}{The results shown in Fig.~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Fig.~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the large tracking errors lead to the great command inputs. Moveover the boundary layer technique works after $0.4s$ and generates continuous torques in the subsequent time. Compared to the results in Fig.~\ref{Figure:torque}, we can find that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Fig.~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjected to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
 \section{Conclusion}\label{sec:5}
 A feasible MDTSM control for n-link robotic manipulator has been presented. The method integrates two individual subsystems as a unity, then builds the surfaces and inputs for it to complete the controller design. The control scheme can guarantee the reaching condition of the desired sliding mode  surface, meanwhile the system states converge to the origin along the desired sliding mode  surface. Also, the entire convergence time can be calculated accordingly. Developing the basic DTSM yields the MDTSM controller, which provides a solution to eliminating chattering, avoiding singularity and fast convergence. For dealing with the underactuated characteristics which may appear in the system, the HDTSM control is derived, and the overhead crane example verifies its effectiveness. However, the control parameters selection is still a challenge especially in the HDTSM control scheme, and we will effort to excavate a full order dual TSM methodology in the future for removing the obstacle caused by parameters essentially.
 \section{Acknowledgment}
